Full documentation: http://jonreid.github.com/OCHamcrest/
Latest sources: https://github.com/jonreid/OCHamcrest
Hamcrest information: http://code.google.com/p/hamcrest/

== Version 1.2 == *IN PROGRESS*

* New matchers:
  - "hasCount" matches collections for which -count satisfies a given matcher.
  - "hasCountOf" matches collections for which -count equals a given count.

* Deprecated: (Affects you if you write your own matchers)
  - Renamed HCInvocation's helper class method +createInvocationForSelector:onClass: to +invocationForSelector:onClass:
  - New helper function HCRequireNonNilObject should be used in place of HCRequireNonNilString.

* Fixed assertThat mismatch description to ask matcher to describe the mismatch value, instead of just reporting the value by itself. If you have unit tests for your own custom matchers that test the message given by assertThat, they will now fail. As a short-term fix, call HCUseDeprecatedDescription(YES) to change mismatch descriptions to their old output. For a more complete fix, update your tests match the new description format.

* Since nil cannot be directly stored in collections, collection matchers now guard against nil.


== Version 1.1 ==

* New matchers:
  - "contains" matches collection containing matching items in order.
  - "containsInAnyOrder" matches collection containing matching items in any order.

* Fixed crash that occurred when trying to describe the matchers allOf, anyOf and isIn on iOS. Related to -ObjC linker flag.

* Changed documentation from HTML to Xcode documentation set. Run "make install" from the Documentation folder to install.

* Rearranged documentation modules to make things easier to find.

* Changed convenience methods to invoke superclass and return id, to support possibility of subclassing matchers.

1.1.2:
- Added the new matchers to the master header and to the iOS target.
- Fixed distribution zip file to preserve symlinks in frameworks.


== Version 1.0 ==
