@@ -1,0 +1,16 @@
+//
+//  OCHamcrest - FakeNonCountingObject.h
+//  Copyright 2011 hamcrest.org. See LICENSE.txt
+//
+//  Created by: Jon Reid
+//
+
+    // Inherited
+#import <Foundation/Foundation.h>
+
+
+@interface FakeNonCountingObject : NSObject
+
++ (id) fake;
+
+@end
