@@ -7,6 +7,7 @@ Hamcrest information: http://code.google.com/p/hamcrest/
 * New matchers:
   - "hasCount" matches collections for which -count satisfies a given matcher.
   - "hasCountOf" matches collections for which -count equals a given count.
+  - "empty" matches empty collection.
 
 * Deprecated: (Affects you if you write your own matchers)
   - Renamed HCInvocation's helper class method +createInvocationForSelector:onClass: to +invocationForSelector:onClass:
